[package]
name = "nebula-scan"
version = "0.1.0"
edition = "2021"
description = "High-performance asynchronous TCP scanner with SYN and connect scanning modes"
license = "MIT"

[features]
default = []
raw-syn = ["dep:pnet"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
futures = "0.3"
ipnetwork = "0.20"
pnet = { version = "0.35", optional = true }
prettytable-rs = "0.10"
ratatui = "0.29"
crossterm = "0.28"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }

